--- a/data/rc_models/rc_models.cfg
+++ b/data/rc_models/rc_models.cfg
@@ -19,14 +19,26 @@
 #
 # When no entry matches at all, 'default' will be used as remoteName
 #
+# AB-COM
+pulse4k         pulse
+pulse4kmini     pulse
+#
 # Amiko
 vipercombo      amiko
 vipert2c        amiko
 vipercombohdd   amiko1
 viperslim       viperslim
 #
-#Axas
+# Axas
 e4hd            e4hd
+#
+# Dreambox
+dm7080          dmm2
+dm820           dmm2
+dm900           dmm2
+dm920           dmm2
+dreamone        dmm3
+dreamtwo        dmm3
 #
 # Edision
 osmega          osmini
@@ -54,12 +66,15 @@ gbquad4k        gb7252
 gbue4k          gb7252
 gbtrio4k        gb7252
 #
+# Golden Interstar
+xpeedlx         xpeedlx
+#
 # Max Digital
 xp1000          xp1000
 #
 # MaXitec
 multibox        multibox
-multiboxse	multibox
+multiboxse      multibox
 #
 # Miraclebox
 mbtwinplus      miraclebox
@@ -79,12 +94,11 @@ hd1265          hd-gen
 hd1500          hd-gen
 hd2400          hd2400
 #
-# Vimastec
-vs1000          vs1x00
-vs1500          vs1x00
-#
-# SAB
-alphatriplehd   sab
+# Octagon
+sf8008          octagon
+sf8008m         octagon
+sfx6008         octagon3
+sx88v2          octagon3
 #
 # Qviart
 lunix           qviart
@@ -92,13 +106,21 @@ lunix3-4k       qviart
 lunix4k         lunix4k
 dual            dual
 #
+# SAB
+alphatriplehd   sab
+#
 # Spycat
 spycat          spycat
 spycatmini      spycat
 spycatminiplus  spycat
 #
-#Golden Interstar
-xpeedlx         xpeedlx
+# uClan
+ustym4kpro      uclan
+ustym4ks2ottx   uclan3
+#
+# Vimastec
+vs1000          vs1x00
+vs1500          vs1x00
 #
 # Vu+
 vuduo           vu
@@ -169,17 +191,3 @@ h11             zgemma
 h17             zgemma
 lc              sh1
 sh1             sh1
-#
-# Octagon
-sf8008         octagon
-sf8008m        octagon
-sfx6008        octagon3
-sx88v2         octagon3
-#
-# uClan
-ustym4kpro     uclan
-ustym4ks2ottx  uclan3
-#
-# AB-COM
-pulse4k        pulse
-pulse4kmini    pulse
