--- a/data/skin_default/icons/Makefile.am
+++ b/data/skin_default/icons/Makefile.am
@@ -145,4 +145,7 @@ dist_install_DATA = \
 	input_info.svg \
 	input_message.svg \
 	input_question.svg \
-	input_warning.svg
+	input_warning.svg \
+	NcamLogo.png \
+	OscamLogo.png
+
